--- a/main.css
+++ b/main.css
@@ -9,11 +9,9 @@
 html,
 body {
     margin: 0px auto;
-    font-family: "sofia-pro", sans-serif;
+    font-family: "orpheuspro", serif;
     line-height: 1.5;
-    font-size: 24px;
-    /* font-weight: 700; */
-    /* text-transform: uppercase; */
+    font-size: 28px;
     color: #1f1e1e;
 }
 
