--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body {
 body {
   padding-top: 20px;
   height: 100%;
-  background-color: #ffffff;
+  background-color: #ececec;
 }
 
 a {
@@ -63,7 +63,7 @@ img {
   justify-content: center;
   align-items: center;
   position: fixed;
-  background-color: var(--background);
+  background-color: #ececec;
   height: 100vh;
   width: 100vw;
   top: 0;
