--- a/main.css
+++ b/main.css
@@ -86,6 +86,32 @@ img {
   animation: sk-scaleout 1.0s infinite ease-in-out;
 }
 
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.85);
+  z-index: 2;
+}
+
+.overlaydesc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  padding: 0px 30px;
+}
+
+.overlaydesc p {
+  margin: 0px;
+}
+
 @-webkit-keyframes sk-scaleout {
   0% {
     -webkit-transform: scale(0)
